Removed Player Anim Support since it doesn't work, Now we have custom rendering support which is defo sick

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -22,7 +22,7 @@ authors="Maketendo, Westankrang"
 
 
 [[dependencies.forged_reactor]]
-    modId="playeranimator"
+    modId="kleidersplayerrenderer"
     mandatory=false
     versionRange="[0,)"
     ordering="NONE"
