--- a/mcreator.gradle
+++ b/mcreator.gradle
@@ -1,24 +1,11 @@
-minecraft {
-  runs {
-   client {    
-      property 'mixin.env.remapRefMap', 'true'
-      property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-       }
-        server {
-         property 'mixin.env.remapRefMap', 'true'
-         property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-       }
-      }
-     }
-
 repositories {
- maven {
-     url = 'https://maven.kosmx.dev/'
- }
+  maven {
+    url = "https://cursemaven.com"
+  }
 }
-
- dependencies {
-   implementation fg.deobf("dev.kosmx.player-anim:player-animation-lib-forge:1.0.2-rc1+1.20")
- }
+      
+dependencies {
+  implementation fg.deobf("curse.maven:kleidersplayerrenderer-682065:5654821")
+}
 
 
