Added Mor HUD Stuff

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,9 +6,10 @@ license="Not specified"
 modId="forged_reactor"
 version="1.0.0"
 displayName="Forged Reactor Mod"
-displayURL="https://mcreator.net"
+displayURL="https://discord.gg/PG45nNWssF"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 authors="Maketendo, Westankrang"
+description="Adds Iron Man in Minecraft"
 
 # Start of user code block mod configuration
 # End of user code block mod configuration
