--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,9 +7,9 @@ modId="forged_reactor"
 version="1.0.0"
 displayName="Forged Reactor Mod"
 displayURL="https://discord.gg/PG45nNWssF"
-credits="Created using mod maker MCreator - https://mcreator.net/about"
+credits="Nexus - (Suit Consultant)"
 authors="Maketendo, Westankrang"
-description="Adds Iron Man in Minecraft"
+description="Adds Iron Man in Minecraft!"
 
 # Start of user code block mod configuration
 # End of user code block mod configuration
