The HUD now displays speed (thx duzo)

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="forged_reactor"
 version="1.0.0"
 displayName="Forged Reactor Mod"
 displayURL="https://discord.gg/PG45nNWssF"
-credits="Nexus - (Suit Consultant)"
+credits="Nexus - (Suit Consultant), Duzo - (Code Assistant)"
 authors="Maketendo, Westankrang"
 description="Adds Iron Man in Minecraft!"
 
