Added Mk6 & 7 Icons

--- a/elements/ArmorConfigurator.mod.json
+++ b/elements/ArmorConfigurator.mod.json
@@ -127,6 +127,9 @@
     "onTickUpdate": {
       "name": "ArmorConfiguratorOnTickUpdate"
     },
+    "onEntityWalksOn": {
+      "name": "ArmorConfiguratorOnTickUpdate"
+    },
     "generateFeature": false,
     "restrictionBiomes": [],
     "blocksToReplace": [
