Starting on Recipes

--- a/elements/ArmorConfigurator.mod.json
+++ b/elements/ArmorConfigurator.mod.json
@@ -2,12 +2,12 @@
   "_fv": 66,
   "_type": "block",
   "definition": {
-    "texture": "minecraft:crying_obsidian",
-    "textureTop": "respawn_anchor_top_off",
-    "textureLeft": "respawn_anchor_side4",
-    "textureFront": "respawn_anchor_side4",
-    "textureRight": "respawn_anchor_side4",
-    "textureBack": "respawn_anchor_side4",
+    "texture": "suit_configurator_side_base",
+    "textureTop": "suit_configurator_top",
+    "textureLeft": "suit_configurator_side_2",
+    "textureFront": "suit_configurator_north_side",
+    "textureRight": "suit_configurator_side",
+    "textureBack": "suit_configurator_side_3",
     "renderType": 10,
     "customModelName": "Normal",
     "rotationMode": 0,
