Icons for all the armor are done, Palladium Poisoning can't be seen in the inventory and config block has a temp description

--- a/elements/ArmorConfigurator.mod.json
+++ b/elements/ArmorConfigurator.mod.json
@@ -35,7 +35,9 @@
     ],
     "name": "Armor Modification Configurator",
     "specialInformation": {
-      "fixedValue": []
+      "fixedValue": [
+        "giv redstone signal to me so i can work loser ):<"
+      ]
     },
     "hardness": 1.0,
     "resistance": 10.0,
