--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,3 @@
-plugins {
-    id 'eclipse'
-    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
-}
-
-version = '1.0'
-group = 'com.yourname.modid'
-archivesBaseName = 'modid'
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
-
 minecraft {
     mappings channel: 'official', version: '1.20.1'
 
@@ -42,16 +31,26 @@ minecraft {
                 }
             }
         }
+
+        // Add the data generation run configuration
+        data {
+            taskName 'runData'
+            workingDirectory project.file('run')
+
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+
+            args '--mod', 'forged_reactor', '--all'
+
+            mods {
+                examplemod {
+                    source sourceSets.main
+                }
+            }
+        }
     }
 }
 
-dependencies {
-    minecraft 'net.minecraftforge:forge:1.20.1-47.3.0'
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
-}
 
 apply from: 'mcreator.gradle'
 
