retest github betas

--- a/.github/workflows/publish-github.yml
+++ b/.github/workflows/publish-github.yml
@@ -1,4 +1,4 @@
-name: Publish on GitHub
+name: Publish Beta on GitHub
 
 on: [ pull_request, workflow_dispatch, push ]
 
@@ -11,7 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/release'
+    if: github.ref != 'refs/heads/release'
     steps:
       - name: Check Environment Variables
         run: env
@@ -31,18 +31,19 @@ jobs:
         if: ${{ runner.os != 'Windows' }}
         run: chmod +x ./gradlew
 
+      - name: Run Datagen
+        run: ./gradlew runDatagen
+
       - name: Build
         run: ./gradlew clean build
 
-      - name: Publish (GitHub)
-        uses: Kir-Antipov/mc-publish@v3.3
+      - name: Publish (CurseForge/Modrinth/GitHub)
+        uses: Kir-Antipov/mc-publish@v3.3.0
         with:
-          changelog-file: CHANGELOG.md
-
           github-token: "${{secrets.GIT_TOKEN}}"
 
           github-generate-changelog: true
-          version-type: release
+          version-type: alpha
 
           loaders: fabric
           java: "${{env.JAVA_VERSION}}"
